resolve spacing height

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,7 +149,6 @@ input[type="number"] {
   width: 95%;
   max-width: 1400px;
   margin: auto;
-  height: 800px;
 }
 
 .content_container {
@@ -159,11 +158,11 @@ input[type="number"] {
 .content_heading {
   font-size:24px;
   padding: 20px 0px 20px;
-  font-family: var(--font-libre-baskerville), serif;
+  font-family: var(--font-lexendZetta), serif !important;
   font-weight: 500; /* Dark color for readability */
   text-transform: capitalize;
   text-align: center; /* Centered text for a balanced look */
-  color: #252324;
+  color: #fc2779;
   
 }
 
